--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,4 @@ test:
 production:
   <<: *default
   adapter: postgresql
-  encoding: unicode
-  pool: 5
-  # database: db/production.sqlite3
+  database: mydatabase
